2008-04-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: Implement support for Type instances as
	DataSource.

2008-04-02  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Minor cleanups and call CellMouseUp.
	* DataGridViewCell.cs: Make some painting routines internally virtual.
	* DataGridViewButtonCell.cs: Implement.

2008-04-02  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: We always need to invalidate our children with
	transparent backgrounds when we are invalidated.
	[Fixes bug #376081]

2008-04-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: EndEdit and CancelEdit should call EndCurrentEdit
	and CancelCurrentEdit on CurrencyManager respectively. Implement
	support for ICancelAddNew too.

2008-04-01  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* CurrencyManager.cs: When calling EndCurrentEdit/CancelCurrentEdit,
	call EndNew/CancelNew if list is ICancelAddNew.

2008-04-01  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Guard against an exception while painting
	if there are no rows.

2008-04-01  Jonathan Pobst  <monkey@jpobst.com>

	* DataGridView.cs: Implement a bunch of keyboard commands.

2008-03-31  Jonathan Pobst  <monkey@jpobst.com>

	* ToolBar.cs: Don't do our painting if UserPaint is set.  If UserPaint
	isn't set, don't call OnPaint.  [Fixes bug #375300]

2008-03-30  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: IsBindingSuspended, ResumeBinding and
	SuspendBinding depend on CurrencyManager. Implement RemoveCurrent,
	hookup the remaining events related to CurrencyManager, and fire
	OnListChanged also for the Clear () method.

2008-03-30  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* BindingSource.cs: Use Current and Position implementations in
	CurrencyManager instead of using our own routines, since we need 
	to be in synch with it. Count should NEVER return a -1 value, and 